--- a/package.json
+++ b/package.json
@@ -5,8 +5,10 @@
   "main": "index.js",
   "dependencies": {
     "react": "^16.2.0",
+    "react-bootstrap": "^0.31.5",
     "react-dom": "^16.2.0",
-    "react-router-dom": "^4.2.2"
+    "react-router-dom": "^4.2.2",
+    "react-share": "^1.18.0"
   },
   "scripts": {
     "build": "webpack",
@@ -30,6 +32,7 @@
     "json-loader": "^0.5.7",
     "less": "^2.7.3",
     "less-loader": "^4.0.5",
+    "prop-types": "^15.6.0",
     "react-router-hash-link": "^1.1.1",
     "rimraf": "^2.6.2",
     "style-loader": "^0.19.0",
