--- a/package.json
+++ b/package.json
@@ -8,9 +8,12 @@
     "react-bootstrap": "^0.31.5",
     "react-dom": "^16.2.0",
     "react-router-dom": "^4.2.2",
-    "react-share": "^1.18.0"
+    "react-share": "^1.18.0",
+    "cors": "2.8.3",
+    "express": "4.15.3"
   },
   "scripts": {
+    "api": "node fishAPI.js",
     "build": "webpack",
     "server": "webpack-dev-server",
     "test": "echo \"Error: no test specified\" && exit 1"
